deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: metapod

spec:
  replicas: 1

  selector:
    matchLabels:
      app: metapod

  template:
    metadata:
      labels:
        app: metapod

    spec:
      containers:
      - name: metapod
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
