service-ci.yaml
apiVersion: v1
kind: Service

metadata:
  name: metapod-service-cip

spec:
  type: ClusterIP

  selector:
    app: metapod

  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
