service-lb.yaml
apiVersion: v1
kind: Service

metadata:
  name: metapod-service

spec:
  type: LoadBalancer

  selector:
    app: metapod

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
