ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: metapod-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metapod-service-cip
                port:
                  number: 8082
